<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>cf-java-logging-support-opentelemetry-agent-extension</artifactId>
    <packaging>jar</packaging>

    <name>cf-java-logging-support-opentelemetry-agent-extension</name>

    <parent>
        <artifactId>cf-java-logging-support-parent</artifactId>
        <groupId>com.sap.hcp.cf.logging</groupId>
        <version>4.2.0</version>
    </parent>

    <properties>
        <opentelemetry.sdk.version>1.65.0</opentelemetry.sdk.version>
        <opentelemetry.sdk-alpha.version>${opentelemetry.sdk.version}-alpha</opentelemetry.sdk-alpha.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom-alpha</artifactId>
                <version>${opentelemetry.sdk-alpha.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk-common</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-exporter-otlp</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry.contrib</groupId>
            <artifactId>opentelemetry-cloudfoundry-resources</artifactId>
            <version>1.59.0-alpha</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>uk.org.webcompere</groupId>
            <artifactId>system-stubs-jupiter</artifactId>
            <version>2.1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>2.2.21</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>io.opentelemetry.contrib:opentelemetry-cloudfoundry-resources</artifact>
                                    <includes>
                                        <include>
                                            io/opentelemetry/contrib/cloudfoundry/resources/CloudFoundryResource.class
                                        </include>
                                    </includes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <excludes>
                                    <exclude>io.opentelemetry</exclude>
                                    <exclude>io.opentelemetry.semconv</exclude>
                                    <exclude>com.fasterxml.jackson.core</exclude>
                                    <exclude>com.squareup.okhttp3</exclude>
                                    <exclude>com.squareup.okio</exclude>
                                    <exclude>org.jetbrains.kotlin</exclude>
                                    <exclude>org.jetbrains</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
